fix to image size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,5 +64,6 @@ p {
 
     #books_gallery a img, #misc_gallery a img {
       height: 150px;
+      width: auto;
     }
 }
